fix for image on small screens

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -29,3 +29,8 @@
 .readme-content table{
   width: 80vw;
 }
+
+.readme-content img {
+  max-width: 100%;
+}
+
